2007-07-07  Bastien Nocera  <hadess@hadess.net>

	* libgsm/glibgsmtest.c: (call_status), (battery), (status), (main):
	* libgsm/phonemgr-listener.c: (phonemgr_listener_class_init),
	(phonemgr_listener_emit_battery), (phonemgr_listener_init),
	(phonemgr_listener_push), (phonemgr_listener_new_sms_cb),
	(phonemgr_listener_call_status), (phonemgr_listener_battery_poll),
	(phonemgr_listener_thread):
	* libgsm/phonemgr-listener.h:
	* libgsm/phonemgr-marshal.list:
	Emit call notification signals from the main thread, not the worker
	thread, add battery signal, still need to work out the non-percent
	battery reporting though

2007-07-06  Bastien Nocera  <hadess@hadess.net>

	* libgsm/glibgsmtest.c: (call_status), (main):
	* libgsm/phonemgr-listener.c: (phonemgr_listener_class_init),
	(phonemgr_listener_emit_call_status),
	(phonemgr_listener_call_status), (phonemgr_listener_new_call_cb),
	(phonemgr_listener_call_notification_poll):
	* libgsm/phonemgr-listener.h:
	* libgsm/phonemgr-marshal.list: Add proper call notification, rings
	for AT with a notification, status is polled,
	update glibgsmtest to print call status changes

2007-07-05  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_new_call_cb),
	(phonemgr_listener_sms_notification_soft_poll),
	(phonemgr_listener_call_notification_poll),
	(phonemgr_listener_set_sms_notification),
	(phonemgr_listener_set_call_notification),
	(phonemgr_listener_thread),
	(phonemgr_listener_sms_notification_real_poll):
	* libgsm/phonemgr-listener.h: Update to compile with current gnokii
	CVS HEAD, add some bits of calls notification API

2007-07-04  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_class_init),
	(phonemgr_listener_emit_status),
	(phonemgr_listener_emit_call_status),
	(phonemgr_listener_emit_message), (phonemgr_listener_new),
	(phonemgr_listener_finalize), (phonemgr_listener_push),
	(phonemgr_listener_new_sms_cb), (phonemgr_listener_poll_real):